# study-mate

./: .env.example  .gitignore  README.md  deploy.md  pyproject.toml
materials/: .gitkeep
src/study_mate/: __init__.py  cli.py  compress.py  config.py  explain.py  extract.py  llm.py  markdown_export.py  prompts.py  render.py  sections.py  server.py
src/study_mate/templates/: explainers.html
tests/: test_cli.py  test_compress.py  test_config.py  test_explain.py  test_extract.py  test_markdown_export.py  test_prompts_llm.py  test_sections.py  test_server.py
